[package]
name = "valkey_glide"
version = "255.255.255"
edition = "2021"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

[lib]
name = "glide"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1" }
bytes = { version = "^1.10" }
glide-core = { path = "../../../glide-core", features = ["socket-layer"] }
